--- a/DateWebApp01/nbproject/project.properties
+++ b/DateWebApp01/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
+file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +43,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.BalcorpFWJavaLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
