--- a/DateWebApp01/nbproject/project.properties
+++ b/DateWebApp01/nbproject/project.properties
@@ -29,9 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\FIDEL\\Desktop\\dist\\BalcorpFWJavaLibrary.jar
-file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\dist\\BalcorpFWJavaLibrary.jar
 file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\FIDEL\\Desktop\\dist\\lib\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,9 +45,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.BalcorpFWJavaLibrary.jar}:\
-    ${file.reference.BalcorpFWJavaLibrary.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar-1}
+    ${file.reference.BalcorpFWJavaLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
