--- a/DateWebApp01/nbproject/project.properties
+++ b/DateWebApp01/nbproject/project.properties
@@ -28,15 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-<<<<<<< HEAD
-file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
-=======
 file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\FIDEL\\Desktop\\dist\\BalcorpFWJavaLibrary.jar
-file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\dist\\BalcorpFWJavaLibrary.jar
->>>>>>> f332dfde405e8502075ad35a8c7b653366c1d8a1
-file.reference.BalcorpFWJavaLibrary.jar-2=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\mysql-connector-java-8.0.11.jar
+file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
+file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\FIDEL\\Desktop\\dist\\lib\\mysql-connector-java-8.0.11.jar
+file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,18 +46,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    <<<<<<< HEAD:\
-    ${file.reference.BalcorpFWJavaLibrary.jar-2}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.BalcorpFWJavaLibrary.jar}
-=======
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
     ${file.reference.BalcorpFWJavaLibrary.jar}:\
     ${file.reference.BalcorpFWJavaLibrary.jar-1}:\
     ${file.reference.mysql-connector-java-8.0.11.jar-1}
->>>>>>> f332dfde405e8502075ad35a8c7b653366c1d8a1
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
