--- a/DateWebApp01/nbproject/private/private.properties
+++ b/DateWebApp01/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\cvill\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1610905565.properties
+file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
+file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/cvill/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
