--- a/DateWebApp01/nbproject/project.properties
+++ b/DateWebApp01/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BalcorpFWJavaLibrary.jar=C:\\Users\\FIDEL\\Desktop\\dist\\BalcorpFWJavaLibrary.jar
+file.reference.BalcorpFWJavaLibrary.jar=..\\BalcorpFWJavaLibrary.jar
 file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\FIDEL\\Desktop\\dist\\lib\\mysql-connector-java-8.0.11.jar
+file.reference.mysql-connector-java-8.0.11.jar=..\\mysql-connector-java-8.0.11.jar
 file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,10 +46,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.BalcorpFWJavaLibrary.jar}:\
     ${file.reference.BalcorpFWJavaLibrary.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar-1}
+    ${file.reference.mysql-connector-java-8.0.11.jar-1}:\
+    ${file.reference.BalcorpFWJavaLibrary.jar}:\
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
