--- a/DateWebApp01/nbproject/private/private.properties
+++ b/DateWebApp01/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\FIDEL\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3106574449.properties
-file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\cvill\\Desktop\\Progra II, proyecto GH\\Avance_PrograII_Cayahuanca\\BalcorpFWJavaLibrary.jar
-file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\cvill\\Desktop\\Progra II, proyecto GH\\Avance_PrograII_Cayahuanca\\mysql-connector-java-8.0.11.jar
+file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\BalcorpFWJavaLibrary.jar
+file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\mysql-connector-java-8.0.11.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/FIDEL/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
