--- a/DateWebApp01/nbproject/private/private.properties
+++ b/DateWebApp01/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\FIDEL\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3106574449.properties
-file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\BalcorpFWJavaLibrary.jar
-file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\FIDEL\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\mysql-connector-java-8.0.11.jar
+deploy.ant.properties.file=C:\\Users\\hectoreduardo\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\hectoreduardo\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\BalcorpFWJavaLibrary.jar
+file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\hectoreduardo\\Documents\\GitHub\\Avance_PrograII_Cayahuanca\\mysql-connector-java-8.0.11.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/FIDEL/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.domain=C:/Users/hectoreduardo/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\FIDEL\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\hectoreduardo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
