--- a/DateWebApp01/nbproject/project.properties
+++ b/DateWebApp01/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,9 +35,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.BalcorpFWJavaLibrary.jar=..\\BalcorpFWJavaLibrary.jar
-file.reference.BalcorpFWJavaLibrary.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\BalcorpFWJavaLibrary.jar
 file.reference.mysql-connector-java-8.0.11.jar=..\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\cvill\\Desktop\\Ciclo 01, 2020\\Programaci\u00f3n II\\Proyectos de netbeans\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,8 +45,6 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.BalcorpFWJavaLibrary.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar-1}:\
     ${file.reference.BalcorpFWJavaLibrary.jar}:\
     ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
@@ -71,7 +73,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
